--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2024"
 [dependencies]
 accelerate-src = { version = "0.3.2", optional = true }
 anyhow = "1.0.97"
+axum = "0.8.3"
+base64 = "0.22.1"
 candle-core = { version = "0.8.4" }
 candle-flash-attn = { version = "0.8.4", optional = true } # For flash attention support, requires CUDA or Accelerate
 candle-nn = { version = "0.8.4" }
@@ -18,6 +20,7 @@ safetensors = "0.5.3"
 serde = "1.0.219"
 serde_json = "1.0.140"
 tokenizers = { version = "0.21.1", features = ["hf-hub", "http"] }
+tokio = "1.44.1"
 
 [build-dependencies]
 bindgen_cuda = { version = "0.1.1", optional = true }
