--- a/flue-core/Cargo.toml
+++ b/flue-core/Cargo.toml
@@ -25,6 +25,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 tokenizers = { workspace = true }
 tokio = { workspace = true }
+base64 = { workspace = true }
 
 [features]
 cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
