Fix branch triggers

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,12 @@
-on: 
+on:
   schedule:
       - cron: '0 0 * * 1'
   push:
-    branches: 
-      - master
+    branches:
+      - main
   pull_request:
-    branches: 
-      - master
+    branches:
+      - main
   workflow_dispatch:
 
 name: Continuous integration
@@ -110,7 +110,7 @@ jobs:
         uses: crate-ci/typos@master
         with:
           config: .typos.toml
-  
+
   # run `mlc` (`cargo install mlc`)
   # markdown-link-check:
   #   runs-on: ubuntu-latest
