--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,4 @@ serde = "1.0.219"
 serde_json = "1.0.140"
 tokenizers = { version = "0.21.1", features = ["hf-hub"] }
 tokio = "1.44.1"
+serde_plain = "1.0.2"
