--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
     "flue-server",
 ]
 exclude = [
-    "flue-flash-attn",
+    "flue-flash-attn-v2",
     "flue-flash-attn-v3",
 ]
 resolver = "2"
@@ -26,7 +26,7 @@ axum = "0.8.3"
 base64 = "0.22.1"
 flue-core = { path = "./flue-core", version = "0.1.0" }
 candle-core = { version = "0.8.4" }
-flue-flash-attn = { path = "./flue-flash-attn", version = "0.8.0" }
+flue-flash-attn-v2 = { path = "./flue-flash-attn-v2", version = "0.8.0" }
 flue-flash-attn-v3 = { path = "./flue-flash-attn-v3", version = "0.8.0" }
 candle-nn = { version = "0.8.4" }
 candle-transformers = { version = "0.8.4" }
