--- a/flue-server/Cargo.toml
+++ b/flue-server/Cargo.toml
@@ -26,7 +26,7 @@ tokio = { workspace = true }
 cuda = ["flue-core/cuda"]
 cudnn = ["flue-core/cudnn"]
 metal = ["flue-core/metal"]
-flash-attn = ["cuda", "flue-core/flash-attn"]
+flash-attn-v2 = ["cuda", "flue-core/flash-attn-v2"]
 flash-attn-v3 = ["cuda", "flue-core/flash-attn-v3"]
 accelerate = ["flue-core/accelerate"]
 mkl = ["flue-core/mkl"]
