--- a/flue-core/Cargo.toml
+++ b/flue-core/Cargo.toml
@@ -17,7 +17,6 @@ candle-core = { workspace = true }
 flue-flash-attn-v2 = { workspace = true, optional = true }
 flue-flash-attn-v3 = { workspace = true, optional = true }
 candle-nn = { workspace = true }
-candle-transformers = { workspace = true }
 hf-hub = { workspace = true }
 image = { workspace = true }
 intel-mkl-src = { workspace = true, optional = true }
@@ -29,11 +28,11 @@ tokio = { workspace = true }
 serde_plain = { workspace = true }
 
 [features]
-cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
+cuda = ["candle-core/cuda", "candle-nn/cuda"]
 cudnn = ["candle-core/cudnn"]
-metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
+metal = ["candle-core/metal", "candle-nn/metal"]
 flash-attn-v2 = ["cuda", "flue-flash-attn-v2"]
 flash-attn-v3 = ["cuda", "flue-flash-attn-v3"]
-accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate", "dep:accelerate-src"]
-mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl", "dep:intel-mkl-src"]
+accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "dep:accelerate-src"]
+mkl = ["candle-core/mkl", "candle-nn/mkl", "dep:intel-mkl-src"]
 
