--- a/flue-server/Cargo.toml
+++ b/flue-server/Cargo.toml
@@ -11,7 +11,7 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
-flue-core = { version = "0.1.0", path = "../flue-core" }
+flue-core = { path = "../flue-core" }
 anyhow = { workspace = true }
 axum = { workspace = true }
 base64 = { workspace = true }
@@ -21,12 +21,3 @@ image = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
-
-[features]
-cuda = ["flue-core/cuda"]
-cudnn = ["flue-core/cudnn"]
-metal = ["flue-core/metal"]
-flash-attn-v2 = ["cuda", "flue-core/flash-attn-v2"]
-flash-attn-v3 = ["cuda", "flue-core/flash-attn-v3"]
-accelerate = ["flue-core/accelerate"]
-mkl = ["flue-core/mkl"]
