--- a/flue-flash-attn-v3/Cargo.toml
+++ b/flue-flash-attn-v3/Cargo.toml
@@ -11,7 +11,9 @@ readme = "README.md"
 repository = "https://github.com/Apsu/flue"
 
 [dependencies]
-candle-core = { version = "0.8.4", features = ["cuda"] }
+# TODO: Uncomment when candle 0.9.0-alpha.2 is pushed to crates.io
+# candle-core = { version = "0.9.0-alpha.2", features = ["cuda"] }
+candle-core = { git = "https://github.com/huggingface/candle", branch = "main", features = ["cuda"] }
 half = { version = "2.3.1", features = ["num-traits"] }
 
 [build-dependencies]
@@ -21,5 +23,7 @@ rayon = "1.7.0"
 
 [dev-dependencies]
 anyhow = { version = "1", features = ["backtrace"] }
-candle-nn = { version = "0.8.4", features = ["cuda"] }
+# TODO: Uncomment when candle 0.9.0-alpha.2 is pushed to crates.io
+# candle-nn = { version = "0.9.0-alpha.2", features = ["cuda"] }
+candle-nn = { git = "https://github.com/huggingface/candle", branch = "main", features = ["cuda"] }
 rstest = "0.23"
