--- a/flue-core/Cargo.toml
+++ b/flue-core/Cargo.toml
@@ -30,7 +30,7 @@ tokio = { workspace = true }
 serde_plain = { workspace = true }
 
 [features]
-cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
+cuda = ["candle-core/cuda", "candle-nn/cuda"]
 cudnn = ["candle-core/cudnn"]
 metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
 flash-attn = ["candle-flash-attn"]
